Agregar excepciones personalizadas para la gestión de errores en TeamService, incluyendo AlreadyInTeamException, NotInTeamException y TeamNotFoundException. Refactorizar el código para utilizar estas excepciones en lugar de RuntimeException. Mejorar la claridad del código al utilizar el constructor de UserTeamId con parámetros.